[package]
name = "llux"
version = "0.1.0"
edition = "2021"
authors = ["Blossomi Shymae"]
description = "Transfer data to the LCU API without any code setup, hehe!"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irelia = { version = "0.3.1", features = ["ws", "tauri"] }
serde_json = { version = "1.0.99" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.10", features = ["derive"] }
owo-colors = { version = "3.5.0" }
tokio = { version = "1.29.1", features = ["full"] }
colored_json = { version = "3.2.0" }
miette = { version = "5.9.0", features = ["fancy"] }
data-encoding = { version = "2.4.0" }
futures-util = { version = "0.3.28"}
chrono = { version = "0.4.26", features = ["std"] }