[package]
name = "llux"
version = "0.2.1"
edition = "2021"
authors = ["Blossomi Shymae"]
description = "Transfer data to the LCU API without any code setup, hehe!"
repository = "https://github.com/BlossomiShymae/llux"
license = "GPL-3.0-only"
keywords = ["lcu", "lcu-api"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irelia = { version = "0.3.1", features = ["ws", "tauri"] }
serde_json = { version = "1.0.99" }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.10", features = ["derive"] }
owo-colors = { version = "3.5.0" }
tokio = { version = "1.29.1", features = ["full"] }
colored_json = { version = "3.2.0" }
miette = { version = "5.9.0", features = ["fancy"] }
data-encoding = { version = "2.4.0" }
futures-util = { version = "0.3.28"}
chrono = { version = "0.4.26", features = ["std"] }